<resources>

    <string name="app_name">公司信息</string>
    <string name="usernamr">公司名称</string>
    <string name="sex">法人代表</string>
    <string name="age">创办时间</string>
    <string name="tell">电话</string>
    <string name="email">邮箱</string>
    <string name="home_page">地址</string>
    <string name="note">公司简介</string>
    <string name="ensure">确定</string>
    <string name="cancelled">取消</string>


</resources>
