<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.sy6.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usernamr"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/edtusername"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/edtsex"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/edtage"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tell"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/edttell"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="12" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="16" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_page"
            android:textSize="30sp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/homepage"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:ems="20" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textSize="30dp"
            android:textColor="#c8f517e6"
            android:paddingTop="20dp"/>

        <EditText
            android:id="@+id/note"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:ems="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button

            android:id="@+id/btn1"

            android:layout_width="140dp"

            android:layout_height="wrap_content"

            android:text="@string/ensure"/>

        <Button

            android:id="@+id/btn2"

            android:layout_width="140dp"

            android:layout_height="wrap_content"

            android:text="@string/cancelled"/>

    </LinearLayout>
</LinearLayout>







